--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="image-sidebar">
+        <div class="sidebar-logo">
+            <img class="logo" src="./images/odin-logo-380x508.png">
+            <div class="logo-heading">Odin</div>
+        </div>
+    </div>
+
     
+
+
+
 </body>
 </html>
