--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </div>
     </div>
     
+
     <div class="content">
 
         <div class="theme-container"><span class="theme-name">light</span> mode</div>
@@ -28,10 +29,46 @@
         <form>
             <div class="form-section">
                 <h3>Sign Up!</h3>
+
+                <div>
+                    <label for="fname">First Name*</label>
+                    <input type="text" name="fname" id="fname" required>
+                </div>
+
+                <div>
+                    <label for="lname">Last Name*</label>
+                    <input type="text" name="lname" id="lname" required>
+                </div>
+
+                <div>
+                    <label for="email">Email*</label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+
+                <div>
+                    <label for="number">Phone Number</label>
+                    <input type="tel" name="number" id="number">
+                </div>
+
+                <div>
+                    <label for="pw">Password*</label>
+                    <input type="password" name="pw" id="pw" required>
+                </div>
+
+                <div>
+                    <label for="confirm-pw">Confirm Password*</label>
+                    <input type="password" name="confirm-pw" id="confirm-pw" required>
+                </div>
             </div>
-            
+
+            <div>
+                <button type="submit" class="create-acc">Create Account</button>
+            </div>
+
         </form>
 
+        <p>Already have an account?</p>
+        <button class="log-in">Log in</button>
 
     </div>
 
