added light/dark mode

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <div class="content">
 
-        <div class="theme-container"><span class="theme-name">light</span> mode</div>
+        <div class="theme-container">
+            <button class="theme-toggle-but"><span class="theme-name">light</span> mode</button>
+        </div>
         
         <div class="text">
             <p>This is not a real online service! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non enim quis libero vehicula lacinia sed vitae sapien.</p>
