added password matching functionality

--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
                     <div>
                         <label for="pw">Password*</label>
                         <input type="password" name="pw" id="pw" required>
+                        <span></span>
                     </div>
     
                     <div>
                         <label for="confirm-pw">Confirm Password*</label>
                         <input type="password" name="confirm-pw" id="confirm-pw" required>
+                        <span></span>
                     </div>
                 </div>
                 
